--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -43,8 +43,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           sonar-scanner -X\
-            -Dsonar.projectKey=your_correct_project_key \
-            -Dsonar.organization=your_correct_organization \
+            -Dsonar.projectKey=PrilexYMCA_Laba5 \
+            -Dsonar.organization=PrilexYMCA \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.sources=.
 
