--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           sonar-scanner -X\
             -Dsonar.projectKey=PrilexYMCA_Laba5 \
-            -Dsonar.organization=PrilexYMCA \
+            -Dsonar.organization=prilexymca52 \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.sources=.
 
