--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=PrilexYMCA_Laba5
-sonar.organization=PrilexYMCA
+sonar.organization=prilexymca52
 sonar.host.url=https://sonarcloud.io
 sonar.language=cpp
 sonar.projectName=Laba5
