--- a/.github/workflows/sonar-analysis.yml
+++ b/.github/workflows/sonar-analysis.yml
@@ -42,7 +42,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          sonar-scanner -X\
+          sonar-scanner\
             -Dsonar.projectKey=PrilexYMCA_Laba5 \
             -Dsonar.organization=prilexymca52 \
             -Dsonar.host.url=https://sonarcloud.io \
