--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,3 +6,5 @@ sonar.projectName=Laba5
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
+sonar.exclusions=build/**, CMakeFiles/**, **/*.o, **/*.a, **/*.so
+
